--- a/src/index.css
+++ b/src/index.css
@@ -29,8 +29,8 @@ label {
 label > input {
   margin: auto;
   display:block;
-  margin-top: .2em;
-  margin-bottom: .2em;
+  margin-top: .4em;
+  margin-bottom: .4em;
 }
 
 select {
@@ -51,4 +51,12 @@ th {
 
 td {
   text-align: center;
+}
+
+button {
+  display: block;
+  margin: auto;
+  margin-top: 2em;
+  height: 2.5em;
+  width: 7em;
 }
