--- a/src/index.css
+++ b/src/index.css
@@ -5,24 +5,32 @@
 }
 
 body {
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-  padding: 40px;
-  width: 400px;
-  height: 100vh;
-  margin-left: auto;
-  margin-right: auto;
   background-color: #f1ab48;
 }
 
+h1 {
+  margin-left: 36%;
+  margin-bottom: 1em;
+  text-align: left;
+}
+
+.home-page {
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  padding: 40px;
+  width: 100vw;
+  height: 90vh;
+}
+
 form {
-  align-items: center;
-  justify-content: center;
+  margin: auto;
+  width: 27em;
   padding: 2em;
   background-color: beige;
   border-radius: 2em;
 }
 
 label {
+  display: block;
   
 }
 
@@ -38,9 +46,20 @@ select {
   display: block;
   margin-top: .2em;
   margin-bottom: .2em;
+  margin-left: 4.3em;
+  width: 40%;
+  text-align: center;
+}
+
+.table-container {
+  margin: auto;
+  width: 90vw;
+  padding: 3em;
+  padding-top: 0.5em;
 }
 
 table {
+  padding: 0.3em;
   border: 2px solid black;
   width: 100%;
 }
