--- a/src/index.css
+++ b/src/index.css
@@ -4,21 +4,22 @@
   box-sizing: border-box;
 }
 
-body {
+.app {
   background-color: #f1ab48;
 }
 
 h1 {
+  margin-top: 0;
   margin-left: 36%;
-  margin-bottom: 1em;
+  margin-bottom: .5em;
   text-align: left;
 }
 
 .home-page {
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-  padding: 40px;
+  padding: 15px;
   width: 100vw;
-  height: 90vh;
+  height: 100vh;
 }
 
 form {
@@ -31,7 +32,6 @@ form {
 
 label {
   display: block;
-  
 }
 
 label > input {
@@ -56,6 +56,7 @@ select {
   width: 90vw;
   padding: 3em;
   padding-top: 0.5em;
+  margin-top: -9em;
 }
 
 table {
@@ -77,5 +78,40 @@ button {
   margin: auto;
   margin-top: 2em;
   height: 2.5em;
+  width: 7em;
+}
+
+.table-container {
+  margin-top : 2em;
+  padding: 2em;
+  background-color:beige;
+  border-radius: .5em;
+}
+
+.table-container > h2 {
+  margin-top: 0;
+}
+
+.background-button {
+  display: flex;
+  margin-top: 6em;
+  margin-right: 6em;
+  font-size: 20px;
+  background: none ;
+  height: 3em;
+  width: 6em;
+  float: right;
+  border: none;
+}
+
+.total-table {
+  margin: auto;
+  width: 40em;
+  padding: .3em;
+  background-color: beige;
+}
+
+.table-maker {
+  height: 1.5em;
   width: 7em;
 }
