--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
 }
 
 h1 {
-  margin-top: 0;
+  margin-top: .5em;
   margin-left: 36%;
   margin-bottom: .5em;
   text-align: left;
@@ -18,7 +18,6 @@ h1 {
 .home-page {
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   padding: 15px;
-  width: 100vw;
   height: 100vh;
 }
 
@@ -53,10 +52,10 @@ select {
 
 .result-container {
   margin: auto;
-  width: 90vw;
+  width: 95vw;
   padding: 3em;
   padding-top: 0.5em;
-  margin-top: -9em;
+  margin-top: -8em;
 }
 
 table {
@@ -76,7 +75,7 @@ td {
 button {
   display: block;
   margin: auto;
-  margin-top: 2em;
+  margin-top: 1.7em;
   height: 2.5em;
   width: 7em;
 }
@@ -92,18 +91,6 @@ button {
   margin-top: 0;
 }
 
-.background-button {
-  display: flex;
-  margin-top: 6em;
-  margin-right: 6em;
-  font-size: 20px;
-  background: none ;
-  height: 3em;
-  width: 6em;
-  float: right;
-  border: none;
-}
-
 .total-table {
   margin: auto;
   width: 40em;
@@ -114,4 +101,18 @@ button {
 .table-maker {
   height: 1.5em;
   width: 7em;
+}
+
+.background-button {
+  display: flex;
+  justify-content: center;
+  margin-right: 6em;
+  padding-top: .3em;
+  font-size: 20px;
+  background: none ;
+  height: 2em;
+  width: 3em;
+  float: right;
+  border: 2px solid darkgrey;
+  border-radius: .5em;
 }
